# SmartCare-Account-Service

./: .env.example  Dockerfile  pyproject.toml
src/: main.py
src/app/: account_service.py  settings.py
src/app/database/: __init__.py  database.py
src/app/database/migrations/: 000_schemas.sql  001_types.sql  002_helpers.sql  003_tables.sql  004_relations.sql  005_uniques.sql  006_notifications.sql  007_dummy.sql
src/app/database/queries/: authorize.sql  sign_in_credentials.sql  sign_in_token.sql  sign_out.sql  verify_credentials.sql
src/app/database/queries/account/: list.sql  (+1 more)
src/app/endpoints/: __init__.py  _base.py  _external.py  account.py  account_credentials.py  account_token.py  action.py  endpoint.py  group.py  session.py
src/app/enums/: __init__.py  account_type.py  http_method.py
src/app/handlers/: __init__.py  _base.py  account.py
src/app/listeners/: __init__.py  _base.py  account.py
src/app/middlewares/: __init__.py  _base.py  authentication.py
src/app/models/inputs/: __init__.py  _base.py  _external.py  _internal.py  account_credentials.py  account_token.py  action.py  endpoint.py  group.py  session.py
src/app/models/outputs/: __init__.py  account.py  account_credentials.py  account_token.py  action.py  endpoint.py  group.py  session.py
src/app/notifiers/: __init__.py  _base.py  employee.py
src/app/operations/: __init__.py  _base.py  _external.py  _internal.py  account.py  account_credentials.py  account_token.py  action.py  endpoint.py  group.py  session.py
src/app/pipes/: __init__.py  pipe_sql_rln.py
src/app/types/: __init__.py
(+38 files in other folders)
